--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,11 @@
 html {
-  background: #fff;
-} 
+    background: rgb(191, 191, 191);
+}
+
+.card {
+    background: #FFF;
+    border: 1px solid #AAA;
+    border-bottom: 3px solid #BBB;
+    padding: 0px;
+    margin: 15px;
+}
